@@ -1,3 +1,9 @@
+2009-07-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/40813
+	* tree-inline.c (copy_bb): Regimplify RHS after last stmt, not before
+	it.
+
 2009-07-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
